
LINK_DIRECTORIES(
 ${VISHNU_EXCEPTION_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(
  .
  ${DIET_INCLUDE_DIR}
  ${EMF_DATA_DIR}
  ${UMS_DATA_DIR}
  ${FMS_EMF_DATA_DIR}
  ${FMS_DATA_DIR}
  ${EMF4CPP_INCLUDE_DIR}
  ${VISHNU_EXCEPTION_INCLUDE_DIR}
  ${CLIENT_PROXY_SOURCE_DIR}
  ${FMS_CLIENT_PROXY_SOURCE_DIR}
  ${UTILVISHNU_SOURCE_DIR}
  ${Boost_INCLUDE_DIRS}
  ${API_SOURCE_DIR}
)

ADD_LIBRARY(
vishnu-fms-api api_fms.cpp
)
SET_TARGET_PROPERTIES(vishnu-fms-api PROPERTIES COMPILE_FLAGS "-fPIC")

TARGET_LINK_LIBRARIES(vishnu-fms-api
  ${DIET_CLIENT_LIBRARIES}
  ${Boost_LIBRARIES}
  emf4cpp-FMS_Data
  exception-vishnu
  ums-client-proxy
  fms-client-proxy
  utils-vishnu
)


INSTALL( TARGETS vishnu-fms-api DESTINATION lib )
INSTALL( FILES api_fms.hpp DESTINATION include)

